--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
-		<form method="OPTIONS" action="https://api.floraindia.com/api/userUpdateMobile">
+		<form method="POST" action="https://clients4.google.com/chrome-sync/command/?client=Google+Chrome&client_id=R2FJMyfxosI7Un3bwx8h9g%3D%3D">
+			<input type="hidden" name="" value="undefined"/>
 			<input type="submit" value="Submit">
 		</form>
 	</body>
